Fix alignment

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -542,7 +542,9 @@ button:hover, .button:hover, a.button:hover {
     padding: 0;
 }
 
-
+h1{
+    font-size: 2em;
+}
 /*poroduct slider*/
 
  .owl-item {
